# CodeSprint

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  resumatch.db  test_api.py
app/: __init__.py  main.py
app/agents/: communication_agent.py  orchestrator.py  resume_parser.py  semantic_matcher.py  skill_normalizer.py
app/api/v1/: auth.py  candidates.py  chat.py  jobs.py  match.py  parse.py  resume.py  schemas.py  skills.py  task_status.py
app/core/: celery_app.py  config.py  database.py  security.py  security_auth.py
app/models/: candidate.py  candidate_skill.py  job.py  match_result.py  resume.py  skill.py  user.py
app/services/: embedding_service.py  vector_store.py
app/tasks/: resume_tasks.py
data/: sample_jobs.json  skill_taxonomy.json
data/sample_resumes/: resume_1.txt  resume_2.txt  resume_3.txt
frontend/: README.md  err.txt  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/chatbot/: AssistantChatbot.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/match/: MatchCard.tsx  SkillRadarChart.tsx
frontend/src/components/ui/: AnimatedBackground.tsx  ParseLoader.tsx
frontend/src/context/: CandidateContext.tsx
frontend/src/pages/: Candidates.tsx  JobMatch.tsx  Login.tsx  ParseResume.tsx
frontend/src/utils/: api.ts
frontend_old/: index.html
